update compare_countries.ipynb file

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -989,9 +989,17 @@
    "source": [
     "### Key Observations\n",
     "- Country benin shows the highest median GHI but also the greatest variability.\n",
-    "- Country  has the lowest average DNI, indicating less direct solar potential.\n",
+    "- Country sierra-leone has the lowest average DNI, indicating less direct solar potential.\n",
     "- The ANOVA p-values suggest that differences in GHI, DNI, and DHI between countries are (or are not) statistically significant."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29419ac6-02f7-47c1-8b93-06771928f4a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
