--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -988,8 +988,8 @@
    "metadata": {},
    "source": [
     "### Key Observations\n",
-    "- Country benin shows the highest median GHI but also the greatest variability.\n",
-    "- Country sierra-leone has the lowest average DNI, indicating less direct solar potential.\n",
+    "- Country Benin shows the highest median GHI but also the greatest variability.\n",
+    "- Country Sierra-leone has the lowest average DNI, indicating less direct solar potential.\n",
     "- The ANOVA p-values suggest that differences in GHI, DNI, and DHI between countries are (or are not) statistically significant."
    ]
   },
